--- a/pg_config.json
+++ b/pg_config.json
@@ -85,6 +85,46 @@
 {"key":"AList","name":"网盘","type":3,"api":"csp_AList","searchable":1,"changeable":0,"ext":"./json/alist.json"},
 {"key":"WebDAV","name":"云盘","type":3,"api":"csp_WebDAV","searchable":1,"changeable":0,"ext":"./json/webdav.json"}
 ],
+
+"parses":[
+    {"name":"解析聚合","type":3,"url":"Demo"},
+    {"name":"Web聚合","type":3,"url":"Web"},
+    {"name":"Json并发","type":2,"url":"Parallel"},
+    {"name":"Json轮询","type":2,"url":"Sequence"},
+    {"name":"解析1","type":0,"url":"https://jx.zhanlangbu.com/?url="},
+    {"name":"解析2","type":0,"url":"https://jx.777jiexi.com/player/?url="},
+    {"name":"解析3","type":0,"url":"https://jx.bozrc.com:4433/player/?url="},
+    {"name":"解析4","type":0,"url":"https://jx.m3u8.pw/?url="},
+    {"name":"解析5","type":0,"url":"https://jxjson.cf/?url="},
+    {"name":"解析6","type":0,"url":"https://okjx.cc/?url="},
+    {"name":"解析7","type":0,"url":"https://api.jiexi.la/?url="},
+    {"name":"解析8","type":0,"url":"https://parse.mw0.cc/?url="},
+    {"name":"解析9","type":0,"url":"https://dm.xbqgx.com/?url="},
+    {"name":"解析10","type":0,"url":"https://chaxun.truechat365.com/?url="},
+    {"name":"解析11","type":0,"url":"http://www.miaoys.cc/vip/?url="},
+    {"name":"解析12","type":0,"url":"https://www.playm3u8.cn/jiexi.php?url="},
+    {"name":"解析13","type":0,"url":"https://www.8090g.cn/?url="},
+    {"name":"解析14","type":0,"url":"https://www.ckplayer.vip/jiexi/?url="},
+    {"name":"解析15","type":0,"url":"https://www.ckmov.vip/api.php?url="},
+    {"name":"解析16","type":0,"url":"https://www.h8jx.com/jiexi.php?url="},
+    {"name":"解析17","type":0,"url":"https://www.kankanju.cc/f/jxplayer.php?v=","ext": {"flag": ["Feiyun","qq", "腾讯", "qiyi", "爱奇艺", "奇艺", "youku", "优酷", "mgtv", "芒果", "letv", "乐视", "pptv", "PPTV", "sohu", "bilibili", "哔哩哔哩", "哔哩"]}},
+    {"name":"解析18","type":0,"url":"https://www.nxflv.com/?url=","ext": {"flag":["qq","腾讯","企鹅","IQiYi","qiyi","爱奇艺","奇艺","youku","YouKu","优酷","sohu","SoHu","搜狐","letv","LeShi","乐视","imgo","mgtv","MangGuo","芒果","SLYS4k","BYGA","luanzi","AliS","dxzy","bilibili","QEYSS","xigua","西瓜视频","腾讯视频","奇艺视频","优酷视频","芒果视频","乐视视频"]}},
+    {"name":"解析19","type":0,"url":"https://www.yemu.xyz/?url=","ext": {"flag":["qq","腾讯","企鹅","IQiYi","qiyi","爱奇艺","奇艺","youku","YouKu","优酷","sohu","SoHu","搜狐","letv","LeShi","乐视","imgo","mgtv","MangGuo","芒果","SLYS4k","BYGA","luanzi","AliS","dxzy","bilibili","QEYSS","xigua","西瓜视频","腾讯视频","奇艺视频","优酷视频","芒果视频","乐视视频"]}},
+    {"name":"解析20","type":0,"url":"https://yun.ckmov.com/?url=","ext": {"flag": ["qq", "腾讯", "qiyi", "爱奇艺", "奇艺", "youku", "优酷", "mgtv", "芒果", "letv", "乐视", "pptv", "PPTV", "sohu", "bilibili", "哔哩哔哩", "哔哩"],"header":{"User-Agent":"okhttp/4.1.0"}}},
+    {"name":"解析21","type":0,"url":"https://vip.bljiex.com/?v=","ext": {"flag": ["qq", "腾讯", "qiyi", "爱奇艺", "奇艺", "youku", "优酷", "mgtv", "芒果", "letv", "乐视", "pptv", "PPTV", "sohu", "bilibili", "哔哩哔哩", "哔哩"],"header":{"User-Agent":"okhttp/4.1.0"}}},
+    {"name":"解析22","type":0,"url":"https://jx.jsonplayer.com/player/?url=","ext": {"flag": ["qq", "腾讯", "qiyi", "爱奇艺", "奇艺", "youku", "优酷", "mgtv", "芒果", "letv", "乐视", "pptv", "PPTV", "sohu", "bilibili", "哔哩哔哩", "哔哩"],"header":{"User-Agent":"okhttp/4.1.0"}}},
+    {"name":"解析23","type":0,"url":"https://jx.xmflv.com/?url=","ext": {"flag":["qq", "腾讯", "qiyi", "爱奇艺", "奇艺", "youku", "优酷", "mgtv", "芒果", "letv", "乐视", "pptv", "PPTV", "sohu", "bilibili", "哔哩哔哩", "哔哩"],"header":{"User-Agent":"okhttp/4.1.0"}}},
+    {"name":"解析24","type":1,"url":"https://jiexi.wogg.link/api/饭特析.php?url="},
+    {"name":"解析25","type":1,"url":"https://b.umkan.cc/API.php?url"}, 
+    {"name":"解析26","type":1,"url":"https://jx.ccabc.cc/byg/?url="},
+    {"name":"解析27","type":1,"url":"http://www.pandown.pro/app/tkys/tkysjx.php?url="},
+    {"name":"解析28","type":1,"url":"http://www.pangujiexi.cc/jiexi.php?url="},
+    {"name":"解析29","type":1,"url":"https://www.ckplayer.vip/jiexi/?url="},
+    {"name":"解析30","type":1,"url":"https://www.1717yun.com/jx/ty.php?url="},
+    {"name":"解析31","type":1,"url":"http://json.g9.pub:66/?url=","ext": {"flag": ["qq", "腾讯", "qiyi", "爱奇艺", "奇艺", "youku", "优酷", "mgtv", "芒果", "letv", "乐视", "pptv", "PPTV", "sohu", "bilibili", "哔哩哔哩", "哔哩"],"header":{"User-Agent":"okhttp/4.1.0"}}},
+    {"name":"解析32","type":1,"url":"https://api.qianqi.net/vip/?url="},
+    {"name":"解析33","type":1,"url":"https://api.json.icu/api/?key=da5e816ee2b93d2b7b8d2f966940aa92&url="}
+  ],
   
 "doh":[
 {"name":"Google","url":"https://dns.google/dns-query","ips":["8.8.4.4","8.8.8.8"]},
